--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "framer-motion": "^11.11.11",
     "next": "^15.0.2",
