--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "source-map-resolve": "^0.6.0",
+    "svgo": "^3.3.2",
     "tailwind-merge": "^2.5.4",
     "web-vitals": "^2.1.4"
   },
