--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "framer-motion": "^11.11.11",
-  
+    "next": "^15.0.3",
     "nodemailer": "^6.7.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.5",
@@ -30,7 +30,6 @@
     "svgo": "^3.3.2",
     "tailwind-merge": "^2.5.4",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
